--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         Cutting-Edge Front-End Developer | Crafting Exceptional Web Experiences
       </p>
       <a href="resume.pdf" download class="hero-button">Download Resume</a>
+      <div class="confetti-container"></div>
     </section>
 
     <!-- About section -->
